Removed persistent <br>s

--- a/learning/courses/quantum-diagonalization-algorithms/qda-2-krylov.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/qda-2-krylov.ipynb
@@ -935,12 +935,12 @@
    "source": [
     "#### Check-in question\n",
     "\n",
-    "Refer to the smoothed plot of diagonalization times vs. matrix dimension above.<br>\n",
-    "(a) At approximately what matrix dimension did the Krylov method become faster, according to this plot?<br>\n",
+    "Refer to the smoothed plot of diagonalization times vs. matrix dimension above.\n",
+    "(a) At approximately what matrix dimension did the Krylov method become faster, according to this plot?\n",
     "(b) What aspects of the calculation could change that dimension at which the Krylov method becomes faster?\n",
     "\n",
     "__Answer:__\n",
-    "(a) Answers may vary if you re-run the calculation, but the Krylov method becomes faster at approximately dimension 50.<br>\n",
+    "(a) Answers may vary if you re-run the calculation, but the Krylov method becomes faster at approximately dimension 50.\n",
     "(b) There are many possible answers. Some important factors are the precision we require and the sparsity of the matrices being diagonalized."
    ]
   },
@@ -2637,16 +2637,27 @@
    "metadata": {},
    "source": [
     "## References:\n",
-    "[1] https://arXiv:2407.14431<br>\n",
-    "[2] https://arxiv.org/abs/1811.09025<br>\n",
-    "[3] https://people.math.ethz.ch/~mhg/pub/biksm.pdf<br>\n",
-    "[4] https://academic.oup.com/book/36426<br>\n",
-    "[5] https://en.wikipedia.org/wiki/Krylov_subspace<br>\n",
-    "[6] Krylov Subspace Methods: Principles and Analysis, Jörg Liesen, Zdenek Strakos https://academic.oup.com/book/36426?login=false<br>\n",
-    "[7] Iterative Methods for Sparse Linear Systems\" by Yousef Saad<br>\n",
-    "[8] \"MINRES-QLP: A Krylov Subspace Method for Indefinite or Singular Symmetric Systems\" by Sou-Cheng Choi, Christopher Paige, and Michael Saunders (https://epubs.siam.org/doi/10.1137/100787921)<br>\n",
+    "\n",
+    "[1] https://arXiv:2407.14431\n",
+    "\n",
+    "[2] https://arxiv.org/abs/1811.09025\n",
+    "\n",
+    "[3] https://people.math.ethz.ch/~mhg/pub/biksm.pdf\n",
+    "\n",
+    "[4] https://academic.oup.com/book/36426\n",
+    "\n",
+    "[5] https://en.wikipedia.org/wiki/Krylov_subspace\n",
+    "\n",
+    "[6] Krylov Subspace Methods: Principles and Analysis, Jörg Liesen, Zdenek Strakos https://academic.oup.com/book/36426?login=false\n",
+    "\n",
+    "[7] Iterative Methods for Sparse Linear Systems\" by Yousef Saad\n",
+    "\n",
+    "[8] \"MINRES-QLP: A Krylov Subspace Method for Indefinite or Singular Symmetric Systems\" by Sou-Cheng Choi, Christopher Paige, and \n",
+    "Michael Saunders (https://epubs.siam.org/doi/10.1137/100787921)\n",
+    "\n",
     "[9] Ethan N. Epperly, Lin Lin, and Yuji Nakatsukasa. \"A theory of quantum subspace diagonalization\". SIAM Journal on Matrix Analysis and Applications 43, 1263–1290 (2022).\n",
-    "[10] https://link.aps.org/doi/10.1103/PRXQuantum.4.030319<br>"
+    "\n",
+    "[10] https://link.aps.org/doi/10.1103/PRXQuantum.4.030319"
    ]
   }
  ],
