swapped lambda symbols for \lambda

--- a/learning/courses/quantum-diagonalization-algorithms/qda-2-krylov.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/qda-2-krylov.ipynb
@@ -40,7 +40,7 @@
     "__Definition:__ Given a symmetric, positive semi-definite $N\\times N$ matrix $A$, the Krylov space $\\mathcal{K}^r$ of order $r$ is the space spanned by vectors obtained by multiplying higher powers of a matrix $A$, up to $r-1\\leq N$, with a reference vector $\\vert v \\rangle$.\n",
     "\n",
     "$$\n",
-    "\\mathcal{K}^r = \\left\\{ \\vert v \\rangle, A \\vert v \\rangle, A^2 \\vert v \\rangle, ..., A^{r-1} \\vert v \\rangle \\right\\}\n",
+    "\\mathcal{K}^r = \\text{span}\\left\\{ \\vert v \\rangle, A \\vert v \\rangle, A^2 \\vert v \\rangle, ..., A^{r-1} \\vert v \\rangle \\right\\}\n",
     "$$\n",
     "\n",
     "Although the vectors above span what we call a Krylov subspace, there is no reason to think that they will be orthogonal. One often uses an iterative orthonormalizing process similar to __Gram-Schmidt orthogonalization__. Here the process is slightly different since each new vector is made orthogonal to the others as it is generated. In this context this is called __Arnoldi iteration__. Starting with the initial vector $|v\\rangle$, one generates the next vector $A|v\\rangle$, and then ensures that this second vector is orthogonal to the first by subtracting off its projection on $|v\\rangle$. That is\n",
@@ -191,13 +191,13 @@
     "We are still left with the problem of determining the eigenvalues of this matrix. But this matrix is slightly smaller than the full matrix. In problems involving very large matrices, working with this smaller subspace may be highly advantageous.\n",
     "\n",
     "$$\n",
-    "\\det⁡(\\tilde{A_1}-λI)=0\n",
+    "\\det⁡(\\tilde{A_1}-\\lambda I)=0\n",
     "$$\n",
     "$$\n",
-    "\\begin{vmatrix} 4-λ&1\\\\1&4-λ\\end{vmatrix} =(4-λ)^2-1=0\n",
+    "\\begin{vmatrix} 4-\\lambda&1\\\\1&4-\\lambda\\end{vmatrix} =(4-\\lambda)^2-1=0\n",
     "$$\n",
     "$$\n",
-    "4-λ=±1→λ=3,5\n",
+    "4-\\lambda=±1→\\lambda=3,5\n",
     "$$\n",
     "Although this is still not a good estimate, it is better than the zeroth order estimate. We will carry this out for one more iteration, to ensure the process is clear. However, this undercuts the point of the method, since we will end up diagonalizing a 3x3 matrix in the next iteration, meaning we have not saved time or computational power."
    ]
@@ -239,13 +239,13 @@
    "source": [
     "We now determine the eigenvalues:\n",
     "$$\n",
-    "\\det⁡(\\tilde{A}_2-λI)=0\n",
+    "\\det⁡(\\tilde{A}_2-\\lambda I)=0\n",
     "$$\n",
     "$$\n",
-    "\\begin{vmatrix}4-λ&1&0\\\\1&4-λ&1\\\\0&1&4-λ\\end{vmatrix} = (4-λ)((4-λ)^3-1)-(4-λ)=0\\\\\n",
+    "\\begin{vmatrix}4-\\lambda&1&0\\\\1&4-\\lambda&1\\\\0&1&4-\\lambda\\end{vmatrix} = (4-\\lambda)((4-\\lambda)^3-1)-(4-\\lambda)=0\\\\\n",
     "$$\n",
     "$$\n",
-    "4-λ=0,4-λ=±2^{1/2}→λ=4-2^{1/2},4,4+2^{1/2}≈2.59,4,5.41\n",
+    "4-\\lambda=0,4-\\lambda=±2^{1/2}→\\lambda=4-2^{1/2},4,4+2^{1/2}≈2.59,4,5.41\n",
     "$$\n",
     "These eigenvalues are exactly the eigenvalues of the original matrix $A$. This must be the case, since we have expanded our Krylov subspace to span the entire vector space of the original matrix $A$.\n",
     "\n",
