Lint and fix metadata

--- a/docs/guides/ai-transpiler-passes.ipynb
+++ b/docs/guides/ai-transpiler-passes.ipynb
@@ -2,12 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ba5ec3d7-2a51-4ffa-b270-cbe18e98a454",
+   "metadata": {},
+   "source": [
+    "# AI transpiler passes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c78c2c0-7afc-4cf3-988d-9e044b5d0fca",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "7244dd08-62a0-4c10-8c0d-0bd01eebe68f",
    "metadata": {},
    "source": [
-    "# AI transpiler passes\n",
-    "\n",
-    "\n",
     "The AI-powered transpiler passes are passes that work as a drop-in replacement of \"traditional\" Qiskit passes for some transpiling tasks. They often produce better results than existing heuristic algorithms (such as lower depth and CNOT count), but are also much faster than optimization algorithms such as Boolean satisfiability solvers. The AI transpiler passes can run on your local environment or on the cloud using the Qiskit Transpiler Service if you are part of the IBM Quantum&reg; Premium Plan.\n",
     "\n",
     "\n",
