--- a/docs/guides/bit-ordering.ipynb
+++ b/docs/guides/bit-ordering.ipynb
@@ -2,11 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1f7fe7f1-988f-461f-8222-f291404b912a",
+   "metadata": {},
+   "source": [
+    "{/* cspell:ignore leftrightarrow */}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49fb8eee-d17a-4648-8b6f-52097acfb305",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": [
+    "# Bit-ordering in the Qiskit SDK"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "369b8b49-a2af-4999-85df-f7659022e11b",
    "metadata": {},
    "source": [
-    "# Bit-ordering in the Qiskit SDK\n",
-    "\n",
     "If you have a set of $n$ bits (or qubits), you'll usually label each bit $0\n",
     "\\rightarrow n-1$. Different softwares and resources must choose how they order\n",
     "these bits both in computer memory and when displayed on-screen.\n",
@@ -70,13 +88,6 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">          \n",
-       "q_0: ─────\n",
-       "     ┌───┐\n",
-       "q_1: ┤ X ├\n",
-       "     └───┘</pre>"
-      ],
       "text/plain": [
        "          \n",
        "q_0: ─────\n",
@@ -234,13 +245,6 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">          \n",
-       "q_0: ──■──\n",
-       "     ┌─┴─┐\n",
-       "q_1: ┤ X ├\n",
-       "     └───┘</pre>"
-      ],
       "text/plain": [
        "          \n",
        "q_0: ──■──\n",
@@ -295,13 +299,6 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">          \n",
-       "q_1: ─────\n",
-       "     ┌───┐\n",
-       "q_0: ┤ X ├\n",
-       "     └───┘</pre>"
-      ],
       "text/plain": [
        "          \n",
        "q_1: ─────\n",
@@ -340,13 +337,6 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">          \n",
-       "q_0: ─────\n",
-       "     ┌───┐\n",
-       "q_1: ┤ X ├\n",
-       "     └───┘</pre>"
-      ],
       "text/plain": [
        "          \n",
        "q_0: ─────\n",
