--- a/docs/guides/configure-error-suppression.ipynb
+++ b/docs/guides/configure-error-suppression.ipynb
@@ -2,11 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "aa4fa466-c51d-42b4-8cc5-4870b03b0a4d",
+   "metadata": {},
+   "source": [
+    "# Configure error suppression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "053b2221-0541-4867-b258-070f0a3e043f",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "3f005a97-45db-4442-ab0c-ca6c986d54f8",
    "metadata": {},
    "source": [
-    "# Configure error suppression\n",
-    "\n",
     "Error suppression refers to techniques where you use knowledge about the undesirable effects to introduce customization that can anticipate and avoid the potential impacts of those effects. These techniques often consist of altering or adding control signals to ensure that the quantum processor returns the desired results.  This typically results in quantum pre-processing overhead; therefore, it is important to achieve a balance between perfecting your results and ensuring that your job completes in a reasonable amount of time.\n",
     "\n",
     "Primitives support a number of error suppression techniques, including [dynamical decoupling](/docs/api/qiskit-ibm-runtime/options-dynamical-decoupling-options#dynamicaldecouplingoptions) and [Pauli twirling](/docs/api/qiskit-ibm-runtime/options-twirling-options). See [Error mitigation and suppression techniques](error-mitigation-and-suppression-techniques) for an explanation of each. When using primitives, you can turn on or off individual methods. See the [Advanced error suppression options](#transpilation-table) section for details.\n",
