--- a/docs/guides/max-execution-time.ipynb
+++ b/docs/guides/max-execution-time.ipynb
@@ -2,10 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "175ff1e8-9d71-4396-9936-37304fa5df1c",
+   "metadata": {},
+   "source": [
+    "# Maximum execution time for Qiskit Runtime workloads"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "653b0c37-be57-49af-b8fe-d60e3bbdc939",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "a0d6acc5-754c-4955-8cf0-5e3e12b9dd1f",
    "metadata": {},
    "source": [
-    "# Maximum execution time for Qiskit Runtime workloads\n",
     "<LegacyContent>\n",
     "<Admonition type=\"note\">\n",
     "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.]( https://quantum.cloud.ibm.com/docs/guides/max-execution-time)\n",
