--- a/docs/guides/monitor-job.ipynb
+++ b/docs/guides/monitor-job.ipynb
@@ -39,7 +39,7 @@
     "<span id=\"retrieve-later\"></span>\n",
     "## Retrieve job results at a later time\n",
     "\n",
-    "Call `service.job(\\<job\\_id>)` to retrieve a job you previously submitted. If you donâ€™t have the job ID, or if you want to retrieve multiple jobs at once; including jobs from retired QPUs (quantum processing units), call `service.jobs()` with optional filters instead. See [QiskitRuntimeService.jobs](../api/qiskit-ibm-runtime/qiskit-runtime-service#jobs).\n",
+    "Call `service.job(\\<job\\_id>)` to retrieve a job you previously submitted. If you don't have the job ID, or if you want to retrieve multiple jobs at once; including jobs from retired QPUs (quantum processing units), call `service.jobs()` with optional filters instead. See [QiskitRuntimeService.jobs](../api/qiskit-ibm-runtime/qiskit-runtime-service#jobs).\n",
     "\n",
     "<Admonition type=\"note\" title=\"Deprecated provider packages\">\n",
     "  `service.jobs()` also returns jobs run from the deprecated `qiskit-ibm-provider` package. Jobs submitted by the older (also deprecated) `qiskit-ibmq-provider` package are no longer available.\n",
@@ -51,28 +51,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c67f78c5-a199-456a-a9e3-35c518b28f50",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "ee0318b6-0bfd-4f0b-b980-4e233a2d5d7b",
    "metadata": {
     "tags": [
      "remove-cell"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "d0hra01rim5s73ap6nc0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This cell is hidden from users\n",
     "from qiskit import QuantumCircuit\n",
     "from qiskit.circuit import Parameter\n",
     "from qiskit.transpiler import generate_preset_pass_manager\n",
+    "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2\n",
     "import numpy as np\n",
     "\n",
@@ -104,62 +107,6 @@
     "sampler = SamplerV2(mode=backend)\n",
     "job = sampler.run([sampler_pub], shots=4)\n",
     "print(job.job_id())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba0ac91d-b44d-4b29-92cd-93b3346a60f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This cell is hidden from users\n",
-    "from qiskit import QuantumCircuit\n",
-    "from qiskit.circuit import Parameter\n",
-    "from qiskit.transpiler import generate_preset_pass_manager\n",
-    "from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2\n",
-    "import numpy as np\n",
-    "\n",
-    "service = QiskitRuntimeService()\n",
-    "job = service.job(\"d0hra01rim5s73ap6nc0\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "id": "7096a5a8-6152-4ebf-b859-5d8ef7723aac",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "The plotly Python package is required for visualization. Install all qiskit-ibm-runtime visualization dependencies with pip install 'qiskit-ibm-runtime[visualization]'.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "File \u001b[0;32m~/.pyenv/versions/3.12.8/envs/qiskit-documentation-3.12/lib/python3.12/site-packages/qiskit_ibm_runtime/visualization/utils.py:39\u001b[0m, in \u001b[0;36mplotly_module\u001b[0;34m(submodule)\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 39\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mimportlib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mimport_module\u001b[49m\u001b[43m(\u001b[49m\u001b[43msubmodule\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mplotly\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     40\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mModuleNotFoundError\u001b[39;00m, \u001b[38;5;167;01mImportError\u001b[39;00m) \u001b[38;5;28;01mas\u001b[39;00m ex:\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.12.8/lib/python3.12/importlib/__init__.py:90\u001b[0m, in \u001b[0;36mimport_module\u001b[0;34m(name, package)\u001b[0m\n\u001b[1;32m     89\u001b[0m         level \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m---> 90\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_bootstrap\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_gcd_import\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m[\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpackage\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m<frozen importlib._bootstrap>:1387\u001b[0m, in \u001b[0;36m_gcd_import\u001b[0;34m(name, package, level)\u001b[0m\n",
-      "File \u001b[0;32m<frozen importlib._bootstrap>:1360\u001b[0m, in \u001b[0;36m_find_and_load\u001b[0;34m(name, import_)\u001b[0m\n",
-      "File \u001b[0;32m<frozen importlib._bootstrap>:1310\u001b[0m, in \u001b[0;36m_find_and_load_unlocked\u001b[0;34m(name, import_)\u001b[0m\n",
-      "File \u001b[0;32m<frozen importlib._bootstrap>:488\u001b[0m, in \u001b[0;36m_call_with_frames_removed\u001b[0;34m(f, *args, **kwds)\u001b[0m\n",
-      "File \u001b[0;32m<frozen importlib._bootstrap>:1387\u001b[0m, in \u001b[0;36m_gcd_import\u001b[0;34m(name, package, level)\u001b[0m\n",
-      "File \u001b[0;32m<frozen importlib._bootstrap>:1360\u001b[0m, in \u001b[0;36m_find_and_load\u001b[0;34m(name, import_)\u001b[0m\n",
-      "File \u001b[0;32m<frozen importlib._bootstrap>:1324\u001b[0m, in \u001b[0;36m_find_and_load_unlocked\u001b[0;34m(name, import_)\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'plotly'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[101], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mqiskit_ibm_runtime\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mvisualization\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m draw_execution_spans\n\u001b[0;32m----> 3\u001b[0m \u001b[43mdraw_execution_spans\u001b[49m\u001b[43m(\u001b[49m\u001b[43mspans\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.12.8/envs/qiskit-documentation-3.12/lib/python3.12/site-packages/qiskit_ibm_runtime/visualization/draw_execution_spans.py:74\u001b[0m, in \u001b[0;36mdraw_execution_spans\u001b[0;34m(names, common_start, normalize_y, line_width, show_legend, *spans)\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mdraw_execution_spans\u001b[39m(\n\u001b[1;32m     52\u001b[0m     \u001b[38;5;241m*\u001b[39mspans: ExecutionSpans,\n\u001b[1;32m     53\u001b[0m     names: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m|\u001b[39m Iterable[\u001b[38;5;28mstr\u001b[39m] \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     57\u001b[0m     show_legend: \u001b[38;5;28mbool\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m     58\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m PlotlyFigure:\n\u001b[1;32m     59\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Draw one or more :class:`~.ExecutionSpans` on a bar plot.\u001b[39;00m\n\u001b[1;32m     60\u001b[0m \n\u001b[1;32m     61\u001b[0m \u001b[38;5;124;03m    Args:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[38;5;124;03m        A plotly figure.\u001b[39;00m\n\u001b[1;32m     73\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 74\u001b[0m     go \u001b[38;5;241m=\u001b[39m \u001b[43mplotly_module\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m.graph_objects\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     75\u001b[0m     colors \u001b[38;5;241m=\u001b[39m plotly_module(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.colors\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mqualitative\u001b[38;5;241m.\u001b[39mPlotly\n\u001b[1;32m     77\u001b[0m     fig \u001b[38;5;241m=\u001b[39m go\u001b[38;5;241m.\u001b[39mFigure()\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.12.8/envs/qiskit-documentation-3.12/lib/python3.12/site-packages/qiskit_ibm_runtime/visualization/utils.py:41\u001b[0m, in \u001b[0;36mplotly_module\u001b[0;34m(submodule)\u001b[0m\n\u001b[1;32m     39\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m importlib\u001b[38;5;241m.\u001b[39mimport_module(submodule, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mplotly\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     40\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mModuleNotFoundError\u001b[39;00m, \u001b[38;5;167;01mImportError\u001b[39;00m) \u001b[38;5;28;01mas\u001b[39;00m ex:\n\u001b[0;32m---> 41\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mModuleNotFoundError\u001b[39;00m(\n\u001b[1;32m     42\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe plotly Python package is required for visualization. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     43\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInstall all qiskit-ibm-runtime visualization dependencies with \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     44\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpip install \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mqiskit-ibm-runtime[visualization]\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     45\u001b[0m     ) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mex\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: The plotly Python package is required for visualization. Install all qiskit-ibm-runtime visualization dependencies with pip install 'qiskit-ibm-runtime[visualization]'."
-     ]
-    }
-   ],
-   "source": [
-    "from qiskit_ibm_runtime.visualization import draw_execution_spans\n",
-    "\n",
-    "draw_execution_spans(spans)"
    ]
   },
   {
@@ -284,23 +231,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "e025fe52-f626-4ecc-bd1d-d559a6fe9cc8",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "index 2 is out of bounds for axis 1 with size 2",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[94], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m mask \u001b[38;5;241m=\u001b[39m spans[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mmask(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Decide whether the 0th shot of parameter set (1, 2) occurred in this span.\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m in_this_span \u001b[38;5;241m=\u001b[39m \u001b[43mmask\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Create a new bit array containing only the PUB-1 data collected during this span.\u001b[39;00m\n\u001b[1;32m      8\u001b[0m bits \u001b[38;5;241m=\u001b[39m pub_results[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mmeas\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 2 is out of bounds for axis 1 with size 2"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from qiskit.primitives import BitArray\n",
+    "\n",
     "# Get the mask of the 1st PUB for the 0th span.\n",
     "mask = spans[0].mask(0)\n",
     "\n",
@@ -308,7 +245,7 @@
     "in_this_span = mask[1, 2, 0]\n",
     "\n",
     "# Create a new bit array containing only the PUB-1 data collected during this span.\n",
-    "bits = pub_results[1].data.meas\n",
+    "bits = result[1].data.meas\n",
     "filtered_data = BitArray(bits.array[mask], bits.num_bits)"
    ]
   },
