--- a/docs/guides/native-gates.ipynb
+++ b/docs/guides/native-gates.ipynb
@@ -2,11 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "74893eff-0d6a-4137-8227-1f7ed0cd31c1",
+   "metadata": {},
+   "source": [
+    "# Native gates and operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6074b5a-79a1-4540-9dba-c3334072756e",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "99ad1630-f19e-4bb0-ac66-aa241697e430",
    "metadata": {},
    "source": [
-    "# Native gates and operations\n",
-    "\n",
     "<LegacyContent>\n",
     "<Admonition type=\"note\">\n",
     "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/native-gates)\n",
