--- a/docs/guides/primitives-rest-api.ipynb
+++ b/docs/guides/primitives-rest-api.ipynb
@@ -2,13 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3d9ef591-91fd-4a49-a065-5e2cda4d41be",
+   "id": "0998165a-381f-4561-a79a-bf584aed9687",
    "metadata": {},
    "source": [
     "{/* cspell:ignore IIZII, XIZZZ, accum */}\n",
     "\n",
-    "# Primitives with REST API\n",
-    "\n",
+    "# Primitives with REST API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da948b6b-2ead-4359-aed4-b824e43ccbfb",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d9ef591-91fd-4a49-a065-5e2cda4d41be",
+   "metadata": {},
+   "source": [
     "<LegacyContent>\n",
     "<Admonition type=\"note\">\n",
     "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/primitives-rest-api)\n",
