--- a/docs/guides/repetition-rate-execution.ipynb
+++ b/docs/guides/repetition-rate-execution.ipynb
@@ -2,11 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "255dc213-977b-46de-86f4-3bab0a005340",
+   "metadata": {},
+   "source": [
+    "# Dynamic repetition rate execution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e5f6e09-ed60-4b74-a2fd-72da40d8645e",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "abdfb100-5321-41d7-8aee-117062aed595",
    "metadata": {},
    "source": [
-    "# Dynamic repetition rate execution\n",
-    "\n",
     "When a circuit is executed on an IBM&reg; quantum processing unit (QPU), an implicit reset is typically inserted at the beginning of the circuit to ensure the qubits are initialized to zero. However, the reset process is not perfect, leading to state preparation errors. To alleviate the error, the system also inserts repetition delay time (or `rep_delay`) between circuits. Each backend has a different default `rep_delay`, but it's usually longer than T1 to allow the environment to reset the qubits. The default `rep_delay` can be queried by running `backend.default_rep_delay`.\n",
     "\n",
     "All IBM QPUs use dynamic repetition rate execution, which allows you to change the `rep_delay` for each job. Circuits you submit in a primitive job are batched together for execution on the QPU. These circuits are executed by iterating over the circuits for each shot requested; the execution is column-wise over a matrix of circuits and shots, as illustrated in the following figure.\n",
