--- a/docs/guides/retired-qpus.ipynb
+++ b/docs/guides/retired-qpus.ipynb
@@ -2,11 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a3c32129-50b5-40f9-b82d-6265cdc7f9dd",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": [
+    "# Retired QPUs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2559dcba-8131-4bed-8286-017a13a312e0",
    "metadata": {},
    "source": [
-    "# Retired QPUs\n",
-    "\n",
     "<LegacyContent>\n",
     "<Admonition type=\"note\">\n",
     "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/retired-qpus)\n",
