--- a/docs/guides/run-jobs-session.ipynb
+++ b/docs/guides/run-jobs-session.ipynb
@@ -2,11 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "b9fd7c5e-f3b8-4f0d-8632-821d601af52c",
+   "metadata": {},
+   "source": [
+    "# Run jobs in a session"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "817c70e7-29dd-4f70-85ad-6487d7c4b010",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "be06e0ee-e593-4fe7-aa98-4f6e0dcbaa9f",
    "metadata": {},
    "source": [
-    "# Run jobs in a session\n",
-    "\n",
     "<LegacyContent>\n",
     "<Admonition type=\"note\" title=\"Notes\">\n",
     "* This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/run-jobs-session)\n",
@@ -75,7 +91,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "backend = service.least_busy(operational=True, simulator=False)\n",
     "session = Session(backend=backend)\n",
     "estimator = Estimator(mode=session)\n",
@@ -194,6 +209,9 @@
    "outputs": [],
    "source": [
     "from qiskit.quantum_info import SparsePauliOp\n",
+    "from qiskit.circuit import QuantumCircuit, Parameter\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
+    "import numpy as np\n",
     "\n",
     "# This cell is hidden from users\n",
     "service = QiskitRuntimeService()\n",
@@ -359,7 +377,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "from scipy.optimize import minimize\n",
+    "from qiskit.circuit.library import efficient_su2\n",
     "\n",
     "\n",
     "def cost_func(params, ansatz, hamiltonian, estimator):\n",
@@ -373,10 +392,18 @@
     "    return energy\n",
     "\n",
     "\n",
-    "num_params = 5\n",
+    "hamiltonian = SparsePauliOp.from_list(\n",
+    "    [(\"YZ\", 0.3980), (\"ZI\", -0.3980), (\"ZZ\", -0.0113), (\"XX\", 0.1810)]\n",
+    ")\n",
+    "su2_ansatz = efficient_su2(hamiltonian.num_qubits)\n",
+    "pm = generate_preset_pass_manager(backend=backend, optimization_level=3)\n",
+    "ansatz = pm.run(su2_ansatz)\n",
+    "\n",
+    "num_params = ansatz.num_parameters\n",
     "x0 = 2 * np.pi * np.random.random(num_params)\n",
     "\n",
     "session = Session(backend=backend)\n",
+    "\n",
     "\n",
     "# If using qiskit-ibm-runtime earlier than 0.24.0, change `mode=` to `session=`\n",
     "estimator = Estimator(mode=session, options={\"default_shots\": int(1e4)})\n",
