Remove empty image files

--- a/docs/guides/simulate-with-qiskit-sdk-primitives.ipynb
+++ b/docs/guides/simulate-with-qiskit-sdk-primitives.ipynb
@@ -10,6 +10,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "26c2809e-c8b4-4e25-996e-c41f72723b1b",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "867f73c6-dd57-4755-9bbd-55ffffe7e09e",
    "metadata": {},
    "source": [
@@ -38,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "5b41a52d-8f15-4ce4-b3f6-effd91946d9c",
    "metadata": {},
    "outputs": [
@@ -48,7 +58,7 @@
        "<Image src=\"/docs/images/guides/simulate-with-qiskit-sdk-primitives/extracted-outputs/5b41a52d-8f15-4ce4-b3f6-effd91946d9c-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "d4c0ac3b-8e5b-4cde-bb26-256324982c2c",
    "metadata": {},
    "outputs": [
@@ -240,7 +250,7 @@
        "<Image src=\"/docs/images/guides/simulate-with-qiskit-sdk-primitives/extracted-outputs/d4c0ac3b-8e5b-4cde-bb26-256324982c2c-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
