--- a/docs/api/qiskit-addon-obp/index.mdx
+++ b/docs/api/qiskit-addon-obp/index.mdx
@@ -9,6 +9,7 @@ description: Index of all the modules in the latest version of qiskit-addon-obp.
 
 *   [Operator backpropagation (`qiskit_addon_obp`)](qiskit-addon-obp)
 *   [Metadata utilities (`qiskit_addon_obp.utils.metadata`)](utils-metadata)
+*   [Noise utilities (`qiskit_addon_obp.utils.noise`)](utils-noise)
 *   [Operator utilities (`qiskit_addon_obp.utils.operations`)](utils-operations)
 *   [Pauli operator simplification (`qiskit_addon_obp.utils.simplify`)](utils-simplify)
 *   [Truncation utilities (`qiskit_addon_obp.utils.truncating`)](utils-truncating)
