--- a/docs/api/qiskit-addon-obp/release-notes.mdx
+++ b/docs/api/qiskit-addon-obp/release-notes.mdx
@@ -10,13 +10,33 @@ in_page_toc_max_heading_level: 2
 
 # Operator backpropagation (OBP) release notes
 
-<span id="release-notes-0-2-0" />
+<span id="release-notes-0-3-0" />
 
 <span id="id2" />
+
+## 0.3.0
+
+<span id="release-notes-0-3-0-new-features" />
+
+### New Features
+
+*   [`PauliLindbladError`](/docs/api/qiskit-ibm-runtime/utils-noise-learner-result-pauli-lindblad-error "(in Qiskit Runtime IBM Client)") objects can now be embedded in slices of `QuantumCircuit` using the [`PauliLindbladErrorInstruction`](utils-noise-pauli-lindblad-error-instruction "qiskit_addon_obp.utils.noise.PauliLindbladErrorInstruction") and will be handled properly by [`backpropagate()`](qiskit-addon-obp#backpropagate "qiskit_addon_obp.backpropagate").
+
+<span id="release-notes-0-3-0-bug-fixes" />
+
+### Bug Fixes
+
+*   Fixed a bug in [`qiskit_addon_obp.backpropagate()`](qiskit-addon-obp#backpropagate "qiskit_addon_obp.backpropagate") which often caused resets to be applied to the wrong qubit.
+
+<span id="release-notes-0-2-0" />
+
+<span id="id3" />
 
 ## 0.2.0
 
 <span id="release-notes-0-2-0-new-features" />
+
+<span id="id4" />
 
 ### New Features
 
@@ -38,6 +58,8 @@ in_page_toc_max_heading_level: 2
 
 <span id="release-notes-0-2-0-bug-fixes" />
 
+<span id="id5" />
+
 ### Bug Fixes
 
 *   The [`num_duplicate_paulis`](utils-simplify#num_duplicate_paulis "qiskit_addon_obp.utils.simplify.SimplifyMetadata.num_duplicate_paulis") was previously unable to differentiate from Pauli terms that were trimmed due to their coefficient being close to zero. This is now tracked correctly with these trimmed terms only counting towards [`num_trimmed_paulis`](utils-simplify#num_trimmed_paulis "qiskit_addon_obp.utils.simplify.SimplifyMetadata.num_trimmed_paulis").
@@ -48,13 +70,13 @@ in_page_toc_max_heading_level: 2
 
 <span id="release-notes-0-1-0" />
 
-<span id="id3" />
+<span id="id6" />
 
 ## 0.1.0
 
 <span id="release-notes-0-1-0-new-features" />
 
-<span id="id4" />
+<span id="id7" />
 
 ### New Features
 
@@ -68,7 +90,7 @@ in_page_toc_max_heading_level: 2
 
 <span id="release-notes-0-1-0-upgrade-notes" />
 
-<span id="id5" />
+<span id="id8" />
 
 ### Upgrade Notes
 
@@ -139,7 +161,7 @@ in_page_toc_max_heading_level: 2
 
 <span id="release-notes-0-1-0-bug-fixes" />
 
-<span id="id6" />
+<span id="id9" />
 
 ### Bug Fixes
 
