Update Algorithmiq TEM notebook
Signed-off-by: Roberto Di Remigio Eikås <robertodr@users.noreply.github.com>

--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ab05b87f",
    "metadata": {},
    "outputs": [],
@@ -208,9 +208,7 @@
     "pub = (qc, [observable])\n",
     "options = {\"default_precision\": 0.02}\n",
     "\n",
-    "job = tem.run(\n",
-    "    pubs=[pub], instance=instance, backend_name=backend_name, options=options\n",
-    ")"
+    "job = tem.run(pubs=[pub], instance=instance, backend_name=backend_name, options=options)"
    ]
   },
   {
@@ -316,6 +314,8 @@
     "-- | -- | -- | --\n",
     "`tem_max_bond_dimension` | int | The maximum bond dimension to be used for the tensor networks. | 500 |\n",
     "`tem_compression_cutoff` | float | The cutoff value to be used for the tensor networks. | 1e-16\n",
+    "`compute_shadows_bias_from_observable` | bool | A boolean flag indicating whether the bias for the classical shadows measurement protocol should be tailored to the PUB observable or not. If False, the classical shadows protocol (equal probability of measuring Z, X, Y) will be used.| False\n",
+    "`shadows_bias` | np.ndarray | The bias to be used for the randomized classical shadows measurement protocol, a 1d or 2d array of size 3 or shape (num_qubits, 3) respectively. order is ZXY | np.array([1 / 3, 1 / 3, 1 / 3])\n",
     "`max_execution_time` | int or `None` | The maximum execution time on the QPU in seconds. If the runtime exceeds this value, the job will be canceled. If `None`, a default limit set by Qiskit Runtime will apply. | `None`\n",
     "`num_randomizations` | int | The number of randomizations to be used for noise learning and gate twirling. | 32\n",
     "`max_layers_to_learn` | int | The maximum number of unique layers to learn. | 4\n",
