--- a/learning/courses/quantum-business-foundations/quantum-technology.ipynb
+++ b/learning/courses/quantum-business-foundations/quantum-technology.ipynb
@@ -27,9 +27,7 @@
     "\n",
     "### IBM Quantum Platform\n",
     "\n",
-    "The [IBM Quantum Network page](https://learning.quantum-computing.ibm.com/network) is available only to partners in the IBM Quantum Network. It delivers curated content, news, and course material to our clients to help them stay up to date and get the most out of quantum systems and services. Partners can accelerate their research and applications by running experiments on IBM quantum computers.\n",
-    "\n",
-    "IBM Quantum provides a suite of quantum computing tools that brings together all of the research and development resources that users need to do great work, in one place. Accessible from the IBM Quantum Network page are four important resources - IBM Quantum Platform, IBM Quantum Documentation, IBM Quantum Learning, and IBM Quantum Administration.\n",
+    "IBM Quantum provides a suite of quantum computing tools that brings together all of the research and development resources that users need to do great work, in one place. Four important pages/resources are the IBM Quantum Platform, IBM Quantum Documentation, IBM Quantum Learning, and IBM Quantum Administration.\n",
     "\n",
     "* [IBM Quantum Platform](https://quantum-computing.ibm.com/) serves as the primary access point for the product ecosystem, where users can get their API keys, track jobs, and compare systems. From the Platform dashboard, users will find a summary of their access details, in addition to links for helpful destinations across the other apps, including featured courses, documentation resources, and links to learning tools.\n",
     "* [IBM Quantum Documentation](https://docs.quantum-computing.ibm.com/) aggregates Qiskit documentation, service documentation, and API reference information into one location, organized in a way that supports users' natural workflows.\n",
