--- a/learning/courses/quantum-business-foundations/index.mdx
+++ b/learning/courses/quantum-business-foundations/index.mdx
@@ -9,7 +9,7 @@ Designed by IBM Quantum experts, this course covers the essentials of quantum co
 
 ## Exam
 
-Take this exam to test your skills. This exam is intended to be taken after reading the lessons in this course. Once you have completed the exam, come back here to see your earned badge.
+To earn your Quantum Business Foundations badge, take the exam at IBM Training linked below. This exam is intended to be taken after reading the lessons in this course. Once you have passed the exam, you will be notified by Credly that you have earned a badge.
 
 [Exam](/learning/courses/quantum-business-foundations/exam)
 
